<resources>
    <string name="app_name">Fomula De</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="labelTeamName">Team Name</string>
    <string name="labelDriverName">Driver Name</string>
    <string name="labelTires">Tires</string>
    <string name="labelBrakes">Brakes</string>
    <string name="labelFuel">Fuel</string>
    <string name="labelBody">Body</string>
    <string name="labelEngine">Engine</string>
    <string name="title_configure">Config</string>
    <string name="navigationConfig">Config</string>
    <string name="navigationTracking">Tracking</string>
    <string name="navigationActions">Actions</string>
    <string name="raceLength">Number of Laps</string>
    <string name="raceLength1">1 Lap</string>
    <string name="raceLength2">2 Laps</string>
    <string name="raceLength3">3 Laps</string>
    <string name="actionsGearLabel">Gear</string>
    <string name="actions1stGear">1st</string>
    <string name="actions2ndGear">2nd</string>
    <string name="actions3rdGear">3rd</string>
    <string name="actions4thGear">4th</string>
    <string name="actions5thGear">5th</string>
    <string name="actions6thGear">6th</string>
    <string name="die1stRange">1 - 2 Squares</string>
    <string name="die2ndRange">2 - 4 Squares</string>
    <string name="die3rdRange">4 - 8 Squares</string>
    <string name="die4thRange">7 - 12 Squares</string>
    <string name="die5thRange">11 - 20 Squares</string>
    <string name="die6thRange">21 - 30 Squares</string>
    <string name="buttonPitLabel">Enter Pit (Tires and Fuel)</string>
    <string name="preference_file_key">FormuleDeSettings</string>
    <string name="settingsTeamName">Team Name</string>
    <string name="settingsPlayerName">Player</string>
    <string name="settingsTiresRemaining">0</string>
    <string name="settingBrakesRemaining">0</string>
    <string name="settingsFuelRemaining">0</string>
    <string name="settingsBodyRemaining">0</string>
    <string name="settingsEngineRemaining">0</string>
    <string name="settingsLapsInRace">laps</string>
    <string name="distanceRange">Distance Range</string>
</resources>
