<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fomulade.ActionsActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/actionsGearLabel"
        app:layout_constraintEnd_toEndOf="@+id/buttonFirstGear"
        app:layout_constraintStart_toStartOf="@+id/buttonFirstGear"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFirstGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:onClick="rollDieFirstGear"
        android:text="@string/actions1stGear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="8dp"
        android:text="@string/die1stRange"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonFirstGear"
        app:layout_constraintStart_toEndOf="@+id/buttonFirstGear" />

    <Button
        android:id="@+id/buttonSecondGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="rollDieSecondGear"
        android:text="@string/actions2ndGear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFirstGear" />

    <Button
        android:id="@+id/buttonThirdGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="rollDieThirdGear"
        android:text="@string/actions3rdGear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSecondGear" />

    <Button
        android:id="@+id/buttonFourthGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="rollDieFourthGear"
        android:text="@string/actions4thGear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonThirdGear" />

    <Button
        android:id="@+id/buttonFifthGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="rollDieFifthGear"
        android:text="@string/actions5thGear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFourthGear" />

    <Button
        android:id="@+id/buttonSixthGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="rollDieSixthGear"
        android:text="@string/actions6thGear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFifthGear" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/die2ndRange"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSecondGear"
        app:layout_constraintStart_toEndOf="@+id/buttonSecondGear" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/die3rdRange"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonThirdGear"
        app:layout_constraintStart_toEndOf="@+id/buttonThirdGear" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/die4thRange"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonFourthGear"
        app:layout_constraintStart_toEndOf="@+id/buttonFourthGear" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/die5thRange"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonFifthGear"
        app:layout_constraintStart_toEndOf="@+id/buttonFifthGear" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/die6thRange"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSixthGear"
        app:layout_constraintStart_toEndOf="@+id/buttonSixthGear" />

    <TextView
        android:id="@+id/textViewRollResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttonPitLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSixthGear" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/radioButton"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanceRange"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView12" />


</android.support.constraint.ConstraintLayout>
